<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:padding="3dp"
            android:background="@color/selected"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_owner_event"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/event_name"
            android:ellipsize="end"
            android:maxLines="2"
            android:maxEms="10"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_type_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/type_event"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tv_owner_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img_event"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/owner_event"
            android:textSize="15sp"
            android:maxEms="8"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_type_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:text="@string/description"
            android:textSize="15dp"
            android:textAlignment="viewStart"
            android:justificationMode="inter_word"/>

        <ImageView
            android:id="@+id/logo_time"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/time_colored"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/logo_loc_pin"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:src="@drawable/loc_pin_colored"
            app:layout_constraintTop_toBottomOf="@id/logo_time"
            app:layout_constraintStart_toStartOf="@id/logo_time"
            app:layout_constraintEnd_toEndOf="@id/logo_time"
            android:layout_marginTop="12dp"/>

        <ImageView
            android:id="@+id/logo_parties"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/parties_colored"
            app:layout_constraintTop_toBottomOf="@id/logo_loc_pin"
            app:layout_constraintStart_toStartOf="@id/logo_loc_pin"
            app:layout_constraintEnd_toEndOf="@id/logo_loc_pin"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_time_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/logo_time"
            app:layout_constraintTop_toTopOf="@id/logo_time"
            app:layout_constraintBottom_toBottomOf="@id/logo_time"
            android:text="@string/time"
            android:layout_marginStart="15dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_location_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/logo_loc_pin"
            app:layout_constraintBottom_toBottomOf="@id/logo_loc_pin"
            app:layout_constraintStart_toStartOf="@id/tv_time_event"
            android:text="@string/location"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_paties_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/logo_parties"
            app:layout_constraintBottom_toBottomOf="@id/logo_parties"
            app:layout_constraintStart_toStartOf="@id/tv_location_event"
            android:text="@string/participant"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_quote_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo_parties"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/remaining_quote"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_quote_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:text="@string/register_event"/>

        <Button
            android:id="@+id/btn_see_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/see_event"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/custom_progress_bar"
            android:progressTint="@color/selected"
            android:indeterminate="false"
            tools:visibility="visible"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>