<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    android:layout_marginVertical="3dp"
    android:layout_marginHorizontal="16dp"
    android:id="@+id/card_view_event"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/selected_variant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="75dp"
            android:layout_height="75dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/tv_type_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_event_name"
            app:layout_constraintHorizontal_bias="1"
            android:text="@string/type_event"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/img_event"
            app:layout_constraintStart_toEndOf="@id/img_event"
            android:text="@string/event_name"
            android:textSize="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxEms="10"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/logo_loc_pin"
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_event_name"
            app:layout_constraintStart_toStartOf="@id/tv_event_name"
            android:src="@drawable/loc_pin"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_location_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/logo_loc_pin"
            app:layout_constraintStart_toEndOf="@id/logo_loc_pin"
            app:layout_constraintBottom_toBottomOf="@id/logo_loc_pin"
            android:text="@string/location"
            android:textSize="10sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/logo_time"
            android:layout_width="9dp"
            android:layout_height="9dp"
            app:layout_constraintTop_toBottomOf="@id/logo_loc_pin"
            app:layout_constraintStart_toStartOf="@id/logo_loc_pin"
            app:layout_constraintEnd_toEndOf="@id/logo_loc_pin"
            android:src="@drawable/time"
            android:layout_marginTop="7dp"/>

        <TextView
            android:id="@+id/tv_time_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/logo_time"
            app:layout_constraintStart_toStartOf="@id/tv_location_event"
            app:layout_constraintBottom_toBottomOf="@id/logo_time"
            android:text="@string/time"
            android:textSize="10sp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/logo_parties"
            android:layout_width="12dp"
            android:layout_height="12dp"
            app:layout_constraintTop_toBottomOf="@id/logo_time"
            app:layout_constraintStart_toStartOf="@id/logo_time"
            app:layout_constraintEnd_toEndOf="@id/logo_time"
            android:src="@drawable/parties"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_paties_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/logo_parties"
            app:layout_constraintBottom_toBottomOf="@id/logo_parties"
            app:layout_constraintStart_toStartOf="@id/tv_time_event"
            android:text="@string/participant"
            android:textSize="10sp"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>